sumo/tests/traci/VariableRetrieval/TrafficLight/errors/UnknownTL/errors.traci
Error: Answered with error to command 162: Traffic light 'xxx' is not known
